pattern2/manifests/bbr-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: body-based-router
  namespace: llm-d
  labels:
    app: body-based-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: body-based-router
  template:
    metadata:
      labels:
        app: body-based-router
    spec:
      serviceAccountName: body-based-router
      containers:
      - name: bbr
        image: us-central1-docker.pkg.dev/k8s-staging-images/gateway-api-inference-extension/bbr:main
        imagePullPolicy: Always
        args:
          - --streaming
          - --v
          - "5"
        ports:
        - containerPort: 9004
          protocol: TCP
          name: ext-proc
        - containerPort: 9005
          protocol: TCP
          name: health
---
apiVersion: v1
kind: Service
metadata:
  name: body-based-router
  namespace: llm-d
  labels:
    app: body-based-router
spec:
  type: ClusterIP
  selector:
    app: body-based-router
  ports:
  - name: ext-proc
    port: 9004
    targetPort: 9004
    protocol: TCP
  - name: health
    port: 9005
    targetPort: 9005
    protocol: TCP
